update: detail update

--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -29,12 +29,12 @@ import YtIcon from '../assets/images/yt-icon.svg';
           </a>
         </li>
         <li>
-          <a class="p-3" href="/yoyogo/detail">
+          <a class="p-3" href="/yoyogo/detail" target="_blank">
             <span class="link-hover">活動辦法</span>
           </a>
         </li>
         <li>
-          <a class="p-3" href="/yoyogo/privacy">
+          <a class="p-3" href="/yoyogo/privacy" target="_blank">
             <span class="link-hover">個資蒐集同意條款</span>
           </a>
         </li>
@@ -47,7 +47,7 @@ import YtIcon from '../assets/images/yt-icon.svg';
     </nav>
     <!-- mobile nav -->
     <nav
-      class="absolute top-[50%] left-8 block -translate-y-1/2 transform px-3 py-2 lg:hidden"
+      class="absolute top-[50%] left-2.5 block -translate-y-1/2 transform px-3 py-2 lg:hidden"
     >
       <div class="hamburger cursor-pointer" id="hamburger">
         <span class="line"></span>
@@ -69,12 +69,12 @@ import YtIcon from '../assets/images/yt-icon.svg';
         <a class="text-primary block px-6 py-6" href="/yoyogo/"> 抽獎登錄 </a>
       </li>
       <li>
-        <a class="block px-6 py-6" href="/yoyogo/detail">
+        <a class="block px-6 py-6" href="/yoyogo/detail" target="_blank">
           <span class="link-hover">活動辦法</span>
         </a>
       </li>
       <li>
-        <a class="block px-6 py-6" href="/yoyogo/privacy">
+        <a class="block px-6 py-6" href="/yoyogo/privacy" target="_blank">
           <span class="link-hover">個資蒐集同意條款</span>
         </a>
       </li>
