--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -117,11 +117,19 @@
       font-size: 20px;
       font-weight: 700;
       color: var(--color-primary);
+
+      @media (width < 64rem) {
+        margin-bottom: 8px;
+      }
     }
 
     > p {
-      margin-bottom: 16px;
+      margin-bottom: 24px;
       font-size: 16px;
+
+      @media (width < 64rem) {
+        margin-bottom: 16px;
+      }
     }
 
     ol {
@@ -144,6 +152,11 @@
           font-size: 16px;
           font-weight: 400;
           color: var(--color-dark-gray);
+
+          @media (width < 64rem) {
+            margin-top: 8px;
+            margin-bottom: 8px;
+          }
         }
 
         &::before {
