--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,11 +150,19 @@ import { Image } from 'astro:assets';
             />
             <span class="ml-2">
               我已了解並同意
-              <a href="/yoyogo/detail" class="text-primary underline">
+              <a
+                href="/yoyogo/detail"
+                class="text-primary underline"
+                target="_blank"
+              >
                 活動辦法
               </a>
               和
-              <a href="/yoyogo/privacy" class="text-primary underline">
+              <a
+                href="/yoyogo/privacy"
+                class="text-primary underline"
+                target="_blank"
+              >
                 個資蒐集同意條款
               </a>
             </span>
