--- a/src/pages/detail.astro
+++ b/src/pages/detail.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
   <section>
     <div
-      class="content-wrap mx-auto mt-10 mb-10 w-full max-w-xl px-4 lg:mt-30 lg:mb-30 lg:px-0"
+      class="content-wrap mx-auto mt-10 mb-10 w-full max-w-200 px-4 lg:mt-30 lg:mb-30 lg:px-0"
     >
       <h1 class="mb-10 text-center lg:mb-20">活動辦法</h1>
       <!-- editor block -->
