fix: update detail

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import { Image } from 'astro:assets';
             >
               !
             </span>
-            <span>請輸入正確姓名格式,勿包含特殊符號或數字</span>
+            <span>請輸入正確姓名格式，勿包含特殊符號或數字</span>
           </div>
         </div>
 
@@ -60,7 +60,7 @@ import { Image } from 'astro:assets';
             >
               !
             </span>
-            請輸入 10 位半形數字,勿填符號或空格
+            請輸入 10 位半形數字，勿填符號或空格
           </div>
         </div>
 
@@ -81,7 +81,7 @@ import { Image } from 'astro:assets';
               >
                 !
               </span>
-              格式有誤,請輸入半形英數字,勿填符號或空格
+              格式有誤，請輸入半形英數字，勿填符號或空格
             </div>
 
             <div
